--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             border: 2px solid #f3f4f6;
             cursor: pointer;
             transition: transform 0.2s ease;
+            position: relative;
         }
 
         .color-circle:hover {
@@ -320,6 +321,37 @@
             .gallery-main {
                 height: 300px;
             }
+        }
+
+        /* Улучшенные подсказки для цветов */
+        .color-circle[title]:hover::after {
+            content: attr(title);
+            position: absolute;
+            bottom: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #1A1A1A;
+            color: white;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 12px;
+            white-space: nowrap;
+            z-index: 10;
+            pointer-events: none;
+        }
+
+        .color-circle[title]:hover::before {
+            content: '';
+            position: absolute;
+            bottom: -8px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-bottom: 5px solid #1A1A1A;
+            z-index: 10;
         }
     </style>
 </head>
